# hass-auth-synology

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  validate.yml
src/hass_auth_synology/: __init__.py  install.py  synology.py
tests/: __init__.py  common.py  conftest.py  test_synology.py
tests/hass_util/: aiohttp.py
tests/test_util/: aiohttp.py
