[tool.poetry]
name = "hass-auth-synology"
version = "0"
description = "Synology authentication provider for Home Assistant"
authors = ["Sam Debruyn <sam@debruyn.dev>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sdebruyn/hass-auth-synology"
repository = "https://github.com/sdebruyn/hass-auth-synology"
keywords = [
    "synology",
    "authentication",
    "homeassistant",
    "hass"
]
packages = [
    { include = "hass_auth_synology", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Home Automation",
    "Topic :: Security"
]

[tool.poetry.dependencies]
python = "^3.9"
homeassistant = "^2022.3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.0.1"
requests-mock = "^1.9.2"
pytest-aiohttp = "^0.3.0"
pytest-cov = "2.12.1"
freezegun = "1.1.0"
pytest-socket = "0.5.1"
paho-mqtt = "1.6.1"
SQLAlchemy = "1.4.27"

[tool.poetry.scripts]
hass-auth-synology = "hass_auth_synology.install:cli"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
